--- a/app/shared/recurring-reservation-controls/_recurring-reservation-controls.scss
+++ b/app/shared/recurring-reservation-controls/_recurring-reservation-controls.scss
@@ -6,13 +6,4 @@
     white-space: nowrap;
     overflow: hidden;
   }
-  .date-picker input {
-    width: 281px;
-    padding: 5px;
-    border: 1px solid #000000;
-
-    @media (max-width: $screen-xs-max) {
-      width: 100%;
-    }
-  }
 }
